feat(form_steps): - styles all steps components on for mobile devices

--- a/src/css/FooterButtons.scss
+++ b/src/css/FooterButtons.scss
@@ -10,12 +10,13 @@
 
     .btn{
         border: unset;
-        padding: 1rem;
+
         
         &.--previous{
             font-weight: 700;
             color: var(--text-primary-color);
             background: unset;
+            padding: 0;
         }
 
         &.--next{
