--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -11,6 +11,9 @@
   --step-color: hsl(206, 94%, 87%);
   --selected-step-color: hsl(228, 100%, 84%);
   --white-color: hsl(0, 0%, 100%); 
+  --selected-plan: hsl(243, 100%, 62%);
+  --light-gray: hsl(229, 24%, 87%);
+  --very-light-gray: hsl(231, 100%, 99%);
 
   --small-text-size: 1.4rem;
   --medium-text-size: 1.6rem;
