feat() - adds logic to display appropriate components based on step - adds form state object - adds formfeed to display components data

--- a/src/css/FooterButtons.scss
+++ b/src/css/FooterButtons.scss
@@ -25,5 +25,13 @@
             border-radius: .3rem;
             background-color: var(--text-heading-color);
         }
+
+        &.--hidden{
+            opacity: 0;
+        }
+
+        &.--confirm{
+            background-color: var(--selected-plan);
+        }
     }
 }
